--- a/readME
+++ b/readME
@@ -1,1 +1,9 @@
-Readme
+Project created by ETIENNE Vincent and WIDNER Lauren.
+
+The project has been created to address the recent increase in the usage of remote access tools during intrusions and the difficulty in detecting this type of tool.
+
+In this project, you will find ideas for detection rules and specific IOCs related to such tools.
+
+Please note that the detection rules provided are examples of logic and may require modifications to suit your environment. Additionally, the list of IOCs will be continuously updated based on reports and further analysis.
+
+You can also find the English version of the article we published in the MISC Cybersecurity magazine.
