--- a/readME
+++ b/readME
@@ -2,7 +2,8 @@ Project created by ETIENNE Vincent and WIDNER Lauren.
 
 The project has been created to address the recent increase in the usage of remote access tools during intrusions and the difficulty in detecting this type of tool.
 
-In this project, you will find ideas for detection rules and specific IOCs related to such tools.
+In this project, you will find ideas for detection rules and specific IOCs related to such tools. 
+Abnormal rule based are mostly made for AnyDesk and Teamviewer since we suppose those are the only one which will stay on our environnement and all the rest will be blocked if it exist.
 
 Please note that the detection rules provided are examples of logic and may require modifications to suit your environment. Additionally, the list of IOCs will be continuously updated based on reports and further analysis.
 
