--- a/readME
+++ b/readME
@@ -4,6 +4,9 @@ The project has been created to address the recent increase in the usage of remo
 
 In this project, you will find ideas for detection rules and specific IOCs related to such tools, especially for approved tools in our environment. Abnormal rule-based detections are mostly tailored for AnyDesk and TeamViewer, as we presume these are the only ones expected to remain in our environment, while all others will be blocked if they exist.
 
-Please note that the detection rules provided are examples of logic and may require modifications to suit your environment. Additionally, the list of IOCs will be continuously updated based on reports and further analysis.
+Please note that the detection rules provided are examples of logic and may require modifications to suit your environment. 
+
+Additionally, the list of IOCs will be continuously updated based on reports and further analysis.
+Link to the Google spreadsheet : https://docs.google.com/spreadsheets/d/1kUwxHhsN-Bl3pvFMaDdK0esLvwekKdS2ZUduYqs4EEw/edit?usp=sharing
 
 You can also find a French version of the article we published in the MISC Cybersecurity magazine.
